# edgeyolo

./: CMakeLists.txt  README.md  README_CN.md  README_EN.md  batch_detect.py  detect.py  detect_for_mdc300f.py  docker_export.py  evaluate.py  export.py  export_onnx2trt.py  export_pth2onnx.py  onnx2trt.py  plot.py  pth2onnx.py  requirements.txt  train.py
cpp/ascend/: CMakeLists.txt  README.md
cpp/ascend/include/: print_utils.h
cpp/ascend/include/cpp-py/: str.h
cpp/ascend/include/detect/: common.h
cpp/ascend/include/detect/mdc/: blob.h  davinci_net.h  dvpp_handler.h  image_data.h  yolo.h
cpp/ascend/scripts/: find_packages.py
cpp/ascend/src/: davinci_net.cpp  dvpp_handler.cpp  main.cpp
cpp/console/: CMakeLists.txt  README.md  logging.h  trtengine.cpp
cpp/console/include/argparse/: argparser.h
cpp/console/include/image_utils/: detect_process.h  trt.h
cpp/console/linux/: CMakeLists.txt  main.cpp  trtengine.cpp  trtengine.h
cpp/console/src/: trt.cpp  yolo.cpp
cpp/console/windows/: argparse.h  main.cpp  trtengine.cpp  trtengine.h
cpp/mnn/: CMakeLists.txt  README.md  setup.bash
cpp/mnn/config/: mnn_detection_coco.yaml  mnn_detection_visdrone.yaml
cpp/mnn/include/: print_utils.h
cpp/mnn/include/argparse/: argparser.h
cpp/mnn/include/image_utils/: detect_process.h  mnn.h
cpp/mnn/models/: README.txt
cpp/mnn/src/: demo.cpp
cpp/rknn/: CMakeLists.txt  README.md  setup_rk3588.sh
cpp/rknn/include/image_utils/: detect_process.h  rknn.h
cpp/rknn/model/: readme.txt
cpp/rknn/scripts/: onnx2rknn.py
cpp/rknn/src/: demo.cpp
cpp/rknn/toolkit_install/: requirements36.txt  requirements38-310.txt  rknn_toolkit_install
cpp/tensorrt/: README.md
cpp/tensorrt/include/: print_utils.h
cpp/tensorrt/include/image_utils/: logging.h
cpp/ui/: README.md
demo/: amct_onnx2om.py  batch_detect.py  check_params.py  conv2repconv.py  dota_detect.py  eval_from_json.py  evaluate.py  export_onnx2trt.py  load_dataset.py
deployment/: CMakeLists.txt  README.md  detect.py  detect_for_ascend.py  server.py
deployment/models/: ascend.yaml  mnn.yaml  rknn.yaml  trt.yaml
deployment/src/: argparser.h  demo.cpp  demo_image.cpp  demo_no_show.cpp  demo_one_image.cpp
deployment/yolo/: CMakeLists.txt  common.hpp  datetime.h  detect.cpp  detect.hpp  libbase.py  logger.h  os.h  str.h  visualize.py  yolo.hpp  yolo.py
deployment/yolo/capture/: capture.py
deployment/yolo/lib/horizon/: libhbcgroup.so.1.0.0  libhbkm.so.1.0.0  libhbmem.so.0.2.0  libhbplayer.so.1
deployment/yolo/lib/horizon/hbmedia/: libmultimedia.so.1
deployment/yolo/platform/: common.hpp
deployment/yolo/platform/ascend/: CMakeLists.txt  davinci_net.cpp
deployment/yolo/platform/ascend/acl/: acl.h  acl_base.h  acl_mdl.h
deployment/yolo/platform/ascend/acl/error_codes/: ge_error_codes.h  rt_error_codes.h
deployment/yolo/platform/ascend/acl/ops/: acl_cblas.h  acl_dvpp.h
deployment/yolo/platform/horizon/: CMakeLists.txt  horizon.cpp
deployment/yolo/platform/horizon/dnn/: hb_dnn.h  hb_sys.h
deployment/yolo/platform/horizon/dnn/plugin/: hb_dnn_layer.h  hb_dnn_plugin.h  hb_dnn_tuple.h
deployment/yolo/platform/mnn/: mnn.cpp
deployment/yolo/platform/rockchip/: rknn.cpp
deployment/yolo/platform/tensorrt/: tensorrt.cpp
edgeyolo/: __init__.py
edgeyolo/data/: __init__.py  coco_classes.py  data_augment.py  data_prefetcher.py  dataloading.py  preprocess.py  samplers.py
edgeyolo/data/datasets/: __init__.py  coco.py  coco_classes.py  datasets_wrapper.py  dota.py  enhanced_mosaicdetection.py  get_dataset.py  mask_coding.py  mask_dataloader.py  mosaicdetection.py  mosaicdetection_ori.py  samlabel.py  visdrone.py  voc.py  voc_classes.py  yolo.py
edgeyolo/detect/: __init__.py  detector.py  dotaDetector.py  export_detector.py
edgeyolo/export/: __init__.py  calib.py  pth2trt.py  rknn.py
edgeyolo/models/: __init__.py  common.py  experimental.py  yolo.py
edgeyolo/train/: __init__.py  default.yaml  launch_train.py  loss.py  optimizer.py  trainer.py
edgeyolo/train/val/: __init__.py  coco_evaluator.py  dota_evaluator.py
edgeyolo/utils/: __init__.py  allreduce_norm.py  boxes.py  cfg_loading.py  checkpoint.py  demo_utils.py  dist.py  ema.py  logger.py  lr_scheduler.py  metric.py  model_utils.py  plot_fig.py  setup_env.py  visualize.py
edgeyolo/utils2/: activations.py  add_nms.py  autoanchor.py  datasets.py  general.py  google_utils.py  loss.py  plots.py  torch_utils.py
edgeyolo/utils2/aws/: resume.py
edgeyolo/utils2/wandb_logging/: wandb_utils.py
include/yolo/: detect.hpp
models/: README.md  hbdnn.yaml  openvino.yaml  readme.txt
params/dataset/: bdd100k.yaml  coco.yaml  dota.yaml  samlabel.yaml  visdrone.yaml  visdrone_coco.yaml  voc.yaml  yolo.yaml
params/model/: edgeyolo-visdrone.yaml  edgeyolo.yaml  edgeyolo_coco.yaml  edgeyolo_coco_s.yaml  edgeyolo_m.yaml  edgeyolo_s.yaml  edgeyolo_tiny.yaml  edgeyolo_tiny_lrelu.yaml
params/train/: train_coco.yaml  train_dota.yaml  train_settings.yaml  train_visdrone.yaml
python/: detect.py
python/yolo/: __init__.py  libbase.py  yolo.py
python/yolo/capture/: __init__.py  capture.py
python/yolo/lib/hbdnn/: libalog.so.1  libhb_api_isp.so.1
src/demo/: CMakeLists.txt  demo.cpp  demo_image.cpp  demo_no_show.cpp  demo_one_image.cpp
src/pylike/: argparse.h  datetime.h  logger.h  os.h  str.h  tabulate.h
src/yolo/: CMakeLists.txt  detect.cpp  yolo.hpp
src/yolo/platform/: common.h
src/yolo/platform/ascend/: ascend.cpp  blob.h  davinci_net.h
src/yolo/platform/ascend/acl/: acl_op.h  acl_prof.h  acl_rt.h
src/yolo/platform/ascend/acl/ops/: acl_fv.h
src/yolo/platform/hbdnn/: CMakeLists.txt  hbdnn.cpp
src/yolo/platform/hbdnn/dnn/: hb_dnn_ext.h  hb_dnn_status.h
src/yolo/platform/hbdnn/dnn/plugin/: hb_dnn_dtype.h  hb_dnn_ndarray.h
src/yolo/platform/mnn/: CMakeLists.txt
src/yolo/platform/openvino/: openvino.cpp
src/yolo/platform/rknn/: CMakeLists.txt  rknn.cpp
src/yolo/platform/rknn/rga/: im2d_version.h  rga.h
src/yolo/platform/tensorrt/: CMakeLists.txt  trt_logging.h
